src/test/testData/kubernetes/KUBE007/pod.yaml.denied
apiVersion: v1
kind: Pod
metadata:
  name: influxdb
spec:
  securityContext:
    appArmorProfile:
      type: <error descr="AppArmor profile disabled or overridden - container loses kernel protection. Use RuntimeDefault or remove a profile type.">privileged</error>
  containers:
    - name: influxdb
      image: influxdb
      securityContext:
        appArmorProfile:
          type: <error descr="AppArmor profile disabled or overridden - container loses kernel protection. Use RuntimeDefault or remove a profile type.">privileged</error>